# key-value-server

./: .gitignore  CMakeLists.txt  README.md
data/: CMakeLists.txt  message.hpp
data/tests/: data-to-string-test.cpp
msg4r/: CMakeLists.txt  msg4r.cpp  msg4r.hpp
msg4r/tests/: msg4r-binary-test.cpp  msg4r-compiler-test.cpp  msg4r-endianness-test.cpp  msg4r-fail-test.cpp  msg4r-inheritance-test.cpp  msg4r-int-test.cpp  msg4r-istream-test.cpp  msg4r-json-test.cpp  msg4r-list-test.cpp  msg4r-map-test.cpp  msg4r-number-parser-test.cpp  msg4r-pair-test.cpp  msg4r-poc-int-test.cpp  msg4r-set-test.cpp  msg4r-shared-ptr-test.cpp  msg4r-state-test.cpp  msg4r-streambuf-test.cpp  msg4r-string-test.cpp  msg4r-struct1-test.cpp  msg4r-struct2-test.cpp  msg4r-template-test.cpp  msg4r-trump-test.cpp  msg4r-vector-test.cpp
